Bug fix for dark mode

--- a/fe/src/assets/base.css
+++ b/fe/src/assets/base.css
@@ -38,7 +38,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --color-background: var(--vt-c-black);
+/*    --color-background: var(--vt-c-black);*/
     --color-background-soft: var(--vt-c-black-soft);
     --color-background-mute: var(--vt-c-black-mute);
 
